--- a/src/menus/View/login.fxml
+++ b/src/menus/View/login.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
 <?import com.jfoenix.controls.*?>
 <?import java.lang.*?>
 <?import javafx.geometry.*?>
@@ -16,20 +17,17 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" minHeight="650.0" minWidth="850.0" prefHeight="650.0" prefWidth="850.0" style="-fx-background-color: #3e3e3e;" xmlns="http://javafx.com/javafx/8" fx:controller="menus.Controller.loginController">
+<AnchorPane minHeight="650.0" minWidth="850.0" prefHeight="650.0" prefWidth="850.0" style="-fx-background-color: #3e3e3e;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="menus.Controller.loginController">
    <children>
       <AnchorPane layoutX="113.0" layoutY="90.0" prefHeight="375.0" prefWidth="590.0" style="-fx-background-color: #ffffff;" AnchorPane.bottomAnchor="90.0" AnchorPane.leftAnchor="113.0" AnchorPane.rightAnchor="113.0" AnchorPane.topAnchor="90.0">
          <children>
-                  <VBox alignment="CENTER" prefHeight="366.0" prefWidth="590.0" spacing="30.0" AnchorPane.bottomAnchor="-2.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <VBox alignment="CENTER" prefHeight="366.0" prefWidth="590.0" spacing="25.0" AnchorPane.bottomAnchor="-2.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                       <children>
-                  <Label fx:id="gameTitleLabel" text="Paper Legion">
-                     <font>
-                        <Font name="Avenir Light" size="39.0" />
-                     </font>
-                     <VBox.margin>
-                        <Insets />
-                     </VBox.margin>
-                  </Label>
+                  <ImageView fx:id="paperLegionLogo" fitHeight="108.0" fitWidth="309.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="/menus/menuAssets/paperLegionLogo.png" />
+                     </image>
+                  </ImageView>
                           <JFXTextField fx:id="usernameInput" alignment="CENTER" maxWidth="300.0" prefWidth="350.0" promptText="Username">
                      <VBox.margin>
                         <Insets top="20.0" />
