--- a/src/menus/View/signUp.fxml
+++ b/src/menus/View/signUp.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
 <?import com.jfoenix.controls.*?>
 <?import java.lang.*?>
 <?import javafx.geometry.*?>
@@ -15,27 +16,24 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" style="-fx-background-color: #3e3e3e;" xmlns="http://javafx.com/javafx/8" fx:controller="menus.Controller.signUpController">
+<AnchorPane style="-fx-background-color: #3e3e3e;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="menus.Controller.signUpController">
    <children>
       <AnchorPane layoutX="113.0" layoutY="90.0" prefHeight="375.0" prefWidth="590.0" style="-fx-background-color: #ffffff;" AnchorPane.bottomAnchor="90.0" AnchorPane.leftAnchor="113.0" AnchorPane.rightAnchor="113.0" AnchorPane.topAnchor="90.0">
          <children>
             <VBox alignment="CENTER" fillWidth="false" layoutX="-8.0" prefHeight="420.0" prefWidth="590.0" spacing="15.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="-8.0" AnchorPane.rightAnchor="-8.0" AnchorPane.topAnchor="0.0">
                <children>
-                  <Label fx:id="gameTitleLabel" text="Paper Legion">
-                     <font>
-                        <Font name="Avenir Light" size="39.0" />
-                     </font>
-                     <VBox.margin>
-                        <Insets />
-                     </VBox.margin>
-                  </Label>
+                  <ImageView fx:id="paperLegionLogo" fitHeight="108.0" fitWidth="309.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="/menus/menuAssets/paperLegionLogo.png" />
+                     </image>
+                  </ImageView>
                         <JFXTextField fx:id="emailInput" alignment="CENTER" prefWidth="300.0" promptText="email" />
                         <JFXTextField fx:id="usernameInput" alignment="CENTER" prefWidth="300.0" promptText="username" />
                         <JFXPasswordField fx:id="passwordInput" alignment="CENTER" prefWidth="300.0" promptText="password" />
                         <JFXPasswordField fx:id="confirmPasswordInput" alignment="CENTER" prefWidth="300.0" promptText="confirm password" />
                         <JFXButton fx:id="signUpButton" contentDisplay="CENTER" style="-fx-background-color: #000000; -fx-text-fill: #ffffff;" text="Sign Up">
                             <padding>
-                                <Insets bottom="20.0" left="50.0" right="50.0" top="20.0" />
+                                <Insets bottom="10.0" left="50.0" right="50.0" top="10.0" />
                             </padding>
                         </JFXButton>
                       <JFXButton fx:id="goBackButton" style="-fx-background-color: #6e6e6e; -fx-text-fill: #ffffff;" text="Go back" />
