--- a/src/menus/View/MatchSetup.fxml
+++ b/src/menus/View/MatchSetup.fxml
@@ -12,7 +12,7 @@
    <children>
       <AnchorPane layoutX="113.0" layoutY="90.0" prefHeight="375.0" prefWidth="590.0" style="-fx-background-color: #ffffff;" AnchorPane.bottomAnchor="90.0" AnchorPane.leftAnchor="113.0" AnchorPane.rightAnchor="113.0" AnchorPane.topAnchor="90.0">
          <children>
-            <HBox alignment="CENTER" prefHeight="470.0" prefWidth="624.0" spacing="20.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <HBox alignment="CENTER" prefHeight="470.0" prefWidth="624.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
                   <VBox alignment="CENTER" prefHeight="470.0" prefWidth="504.0" spacing="10.0">
                      <children>
@@ -29,21 +29,18 @@
                         <Insets left="25.0" />
                      </HBox.margin>
                   </VBox>
-                  <VBox alignment="CENTER_LEFT" prefHeight="470.0" prefWidth="699.0" spacing="15.0">
+                  <VBox alignment="CENTER" prefHeight="470.0" prefWidth="699.0" spacing="15.0" HBox.hgrow="ALWAYS">
                      <children>
-                        <Label fx:id="gameTitleLabel" text="Paper Legion">
-                           <font>
-                              <Font name="Avenir Light" size="39.0" />
-                           </font>
-                           <VBox.margin>
-                              <Insets />
-                           </VBox.margin>
-                        </Label>
-                        <TableView fx:id="table" prefHeight="320.0" prefWidth="354.0">
+                        <ImageView fx:id="paperLegionLogo" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="/menus/menuAssets/paperLegionLogo.png" />
+                           </image>
+                        </ImageView>
+                        <TableView fx:id="table" prefHeight="320.0" prefWidth="357.0">
                           <columns>
-                            <TableColumn fx:id="matchID_Table" prefWidth="104.0" text="Match ID" />
-                            <TableColumn fx:id="player_table" prefWidth="159.0" text="Player" />
-                              <TableColumn fx:id="passwordTable" prefWidth="90.0" text="Password" />
+                            <TableColumn fx:id="matchID_Table" prefWidth="84.0" text="Match ID" />
+                            <TableColumn fx:id="player_table" prefWidth="131.0" text="Player" />
+                              <TableColumn fx:id="passwordTable" prefWidth="138.0" text="Password Protected" />
                           </columns>
                            <VBox.margin>
                               <Insets right="25.0" />
@@ -54,7 +51,7 @@
                         <Insets />
                      </opaqueInsets>
                      <HBox.margin>
-                        <Insets left="50.0" right="50.0" />
+                        <Insets left="50.0" right="10.0" />
                      </HBox.margin>
                   </VBox>
                </children>
