--- a/src/menus/View/signUp.fxml
+++ b/src/menus/View/signUp.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" style="-fx-background-color: #3e3e3e;"
-            xmlns="http://javafx.com/javafx/8.0.172-ea" fx:controller="menus.Controller.SignUpController">
+            xmlns="http://javafx.com/javafx/8.0.172-ea" fx:controller="menus.Controller1.SignUpController">
     <AnchorPane layoutX="113.0" layoutY="90.0" prefHeight="375.0" prefWidth="590.0"
                 style="-fx-background-color: #ffffff;" AnchorPane.bottomAnchor="90.0" AnchorPane.leftAnchor="113.0"
                 AnchorPane.rightAnchor="113.0" AnchorPane.topAnchor="90.0">
