--- a/src/menus/fxml/Login.fxml
+++ b/src/menus/fxml/Login.fxml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXPasswordField?>
+<?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
-<AnchorPane fx:id="paneforPattern" style="-fx-background-color: #3e3e3e;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="menus.controller.SignUpController">
+<AnchorPane fx:id="paneforPattern" minHeight="650.0" minWidth="850.0" prefHeight="650.0" prefWidth="850.0" style="-fx-background-color: #3e3e3e;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="menus.controller.LoginController">
     <children>
         <AnchorPane fx:id="contentPane" layoutX="113.0" layoutY="90.0" prefHeight="375.0" prefWidth="590.0" stylesheets="/menus/controller/MenuCSS.css" AnchorPane.bottomAnchor="90.0" AnchorPane.leftAnchor="113.0" AnchorPane.rightAnchor="113.0" AnchorPane.topAnchor="90.0">
             <children>
-                <VBox alignment="CENTER" fillWidth="false" layoutX="-8.0" layoutY="-23.0" prefHeight="420.0" prefWidth="590.0" spacing="15.0" AnchorPane.bottomAnchor="-2.0" AnchorPane.leftAnchor="-8.0" AnchorPane.rightAnchor="-8.0" AnchorPane.topAnchor="-23.0">
+                <VBox alignment="CENTER" prefHeight="366.0" prefWidth="590.0" spacing="25.0" AnchorPane.bottomAnchor="-2.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <children>
                         <ImageView fx:id="paperLegionLogo" fitHeight="258.0" fitWidth="459.0" pickOnBounds="true" preserveRatio="true">
                             <image>
@@ -18,16 +20,22 @@
                             </image>
                         </ImageView>
                         <Label fx:id="alertField" style="-fx-text-fill: red;" />
-                        <JFXTextField fx:id="emailInput" alignment="CENTER" prefWidth="300.0" promptText="email" />
-                        <JFXTextField fx:id="usernameInput" alignment="CENTER" prefWidth="300.0" promptText="username" />
-                        <JFXPasswordField fx:id="passwordInput" alignment="CENTER" prefWidth="300.0" promptText="password" />
-                        <JFXPasswordField fx:id="confirmPasswordInput" alignment="CENTER" prefWidth="300.0" promptText="confirm password" />
-                        <JFXButton fx:id="signUpButton" contentDisplay="CENTER" style="-fx-background-color: #000000; -fx-text-fill: #ffffff;" text="Sign Up">
-                            <padding>
-                                <Insets bottom="10.0" left="50.0" right="50.0" top="10.0" />
-                            </padding>
+                        <JFXTextField fx:id="usernameInput" alignment="CENTER" maxWidth="300.0" prefWidth="350.0" promptText="Username">
+                            <VBox.margin>
+                                <Insets top="20.0" />
+                            </VBox.margin>
+                        </JFXTextField>
+                        <JFXPasswordField fx:id="passwordInput" alignment="CENTER" maxWidth="300.0" promptText="Password" />
+                        <JFXButton fx:id="newUserButton" prefHeight="27.0" prefWidth="100.0" style="-fx-background-color: e3e4e5;" text="New User?" textAlignment="CENTER">
+                            <VBox.margin>
+                                <Insets top="25.0" />
+                            </VBox.margin>
                         </JFXButton>
-                        <JFXButton fx:id="goBackButton" style="-fx-background-color: #6e6e6e; -fx-text-fill: #ffffff;" text="Go back" />
+                        <JFXButton fx:id="loginEnterButton" prefHeight="49.0" prefWidth="189.0" style="-fx-background-color: #000000; -fx-text-fill: #ffffff;" text="Enter">
+                            <VBox.margin>
+                                <Insets />
+                            </VBox.margin>
+                        </JFXButton>
                     </children>
                 </VBox>
             </children>
