--- a/src/menus/fxml/GameInfo.fxml
+++ b/src/menus/fxml/GameInfo.fxml
@@ -48,7 +48,7 @@
                                    <HBox prefHeight="100.0" prefWidth="200.0">
                                       <children>
                                           <Pane fx:id="placementbackgroundImagePane" prefWidth="486.0" HBox.hgrow="ALWAYS" />
-                                          <JFXTextArea fx:id="placementText" editable="false" prefHeight="210.0" prefWidth="88.0" text="The game starts with the placement phase, it is only in the beginning of the game, so make your placement choice wisely!&#10;&#10;You start off with a finite amount of resources that you can buy units with. &#10;&#10;Just drag and drop the units where you want.&#10;&#10;Pro tip: A good starting placement and unit type choice combination can be deadly!" wrapText="true" HBox.hgrow="ALWAYS">
+                                          <JFXTextArea fx:id="placementText" editable="false" prefHeight="210.0" prefWidth="88.0" text="The game starts with the placement phase, it is only in the beginning of the game, so make your placement choice wisely!&#10;&#10;You start off with a finite amount of resources that you can buy units with. &#10;&#10;Just drag and drop the units wherever you want on the white tiles. &#10;If you regret the choice of unit, you can simply right click on a unit to sell it.&#10;When you are done, hit the “Finished with placement” button and the game will start as soon as&#10;your opponent is finished with their deadly scheme.&#10;&#10;Pro tip: A good starting placement and unit type choice combination can be deadly!" wrapText="true" HBox.hgrow="ALWAYS">
                                               <HBox.margin>
                                                   <Insets left="15.0" right="15.0" top="15.0" />
                                               </HBox.margin>
@@ -62,7 +62,7 @@
                                    <HBox>
                                       <children>
                                           <Pane fx:id="backgroundImagePane" prefWidth="486.0" HBox.hgrow="ALWAYS" />
-                                          <JFXTextArea fx:id="movementText" editable="false" prefWidth="88.0" text="While you are in the movement phase, you can move one of your units within that unit's movement range. &#10;&#10;You can also skip the movement phase and go directly to attack. &#10;&#10;You are automatically taken to the attack phase after the movement phase." wrapText="true" HBox.hgrow="ALWAYS">
+                                          <JFXTextArea fx:id="movementText" editable="false" prefWidth="88.0" text="While you are in the movement phase, you can move one of your units simply by selecting the unit you want to move, and click on the tile you want it to move to. You can only move the unit to the lime highlighted tiles, which displays the unit’s movement range.&#10;&#10;If you  have selected a unit and, but would rather move another unit, you can click the right mouse button to deselect the unit.&#10;&#10;When you are finished with the movement phase you will automatically enter the attack phase.&#10;You can end your turn, but you can’t skip between phases.&#10;&#10;You can surrender anytime you want, if you like the cowards way out, that is." wrapText="true" HBox.hgrow="ALWAYS">
                                               <HBox.margin>
                                                   <Insets left="15.0" right="15.0" top="15.0" />
                                               </HBox.margin>
@@ -76,7 +76,7 @@
                                    <HBox prefHeight="100.0" prefWidth="200.0">
                                       <children>
                                           <Pane fx:id="attackbackgroundImagePane" prefWidth="486.0" HBox.hgrow="ALWAYS" />
-                                          <JFXTextArea fx:id="attackText" editable="false" prefWidth="88.0" text="When in attack phase, you can attack as many of the opponents unit as long as you have units within attack range.&#10;&#10;After you have completed all your devious attacks, you hit end turn. And wait in suspense for your opponents move." wrapText="true" HBox.hgrow="ALWAYS">
+                                          <JFXTextArea fx:id="attackText" editable="false" prefWidth="88.0" text="When in attack phase, you can attack as many of the opponents unit as long as you have units within attack range.&#10;&#10;Simply left click  and select the unit you want to attack with, if that unit is within attack range, just double click on one of the highlighted units that it can attack.&#10;&#10;After you have completed all your devious attacks, you hit end turn. And wait in suspense for your opponents move.&#10;&#10;Defeat all of your enemy’s paper soldiers to achieve the glorious satisfaction of your enemy’s defeat." wrapText="true" HBox.hgrow="ALWAYS">
                                               <HBox.margin>
                                                   <Insets left="15.0" right="15.0" top="15.0" />
                                               </HBox.margin>
